--- a/index.html
+++ b/index.html
@@ -1,116 +1,1 @@
-<!doctype html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>회사명 | 공식 홈페이지</title>
-  <meta name="description" content="회사 소개, 제품, 시공사례, 문의 안내." />
-  <!-- CSS는 나중에 추가. 오늘은 의미 있는 마크업과 링크만 구성 -->
-</head>
-<body>
-  <!-- 공통 헤더 / 네비게이션 -->
-  <header role="banner">
-    <div>
-      <a href="/" aria-label="홈으로">회사 로고</a>
-    </div>
-    <nav aria-label="주요 메뉴">
-      <ul>
-        <li><a href="/about.html">회사소개</a></li>
-        <li><a href="/products/index.html">제품소개</a></li>
-        <li><a href="/effects.html">설치효과·특성</a></li>
-        <li><a href="/cases/index.html">시공사례</a></li>
-        <li><a href="/resources.html">기술자료실</a></li>
-        <li><a href="/gov-support.html">정부지원사업</a></li>
-        <li><a href="/branches/index.html">전국지사·대리점·총판</a></li>
-        
-        <li><a href="/faq.html">FAQ</a></li>
-        <li><a href="/contact.html">문의하기</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main id="content">
-    <!-- 히어로 영역: 오늘은 텍스트만 -->
-    <section aria-label="핵심 메시지">
-      <h1>한 문장 USP(고객이 얻는 핵심 가치)</h1>
-      <p>간단한 부연 설명 1~2문장. 장점/차별점.</p>
-      <p><a href="/contact.html">지금 문의하기 →</a></p>
-    </section>
-
-    <!-- 퀵 링크: 상호 하이퍼링크만 제공 -->
-    <nav aria-label="바로가기">
-      <ul>
-        <li><a href="/products/index.html">주요 제품 보기</a></li>
-        <li><a href="/cases/index.html">시공사례 모아보기</a></li>
-        <li><a href="/branches/index.html">가까운 지사 찾기</a></li>
-      </ul>
-    </nav>
-
-    <!-- 추천 섹션: 오늘은 제목/목차형 링크만 배치 -->
-    <section aria-labelledby="home-products">
-      <h2 id="home-products">제품 하이라이트</h2>
-      <ul>
-        <li><a href="/products/product-a.html">제품 A</a> — 한 줄 설명</li>
-        <li><a href="/products/product-b.html">제품 B</a> — 한 줄 설명</li>
-        <li><a href="/products/product-c.html">제품 C</a> — 한 줄 설명</li>
-      </ul>
-      <p><a href="/products/index.html">모든 제품 보기 →</a></p>
-    </section>
-
-    <section aria-labelledby="home-effects">
-      <h2 id="home-effects">설치효과·특성</h2>
-      <ol>
-        <li><a href="/effects.html#saving">에너지 절감</a></li>
-        <li><a href="/effects.html#stability">안정성/안전성</a></li>
-        <li><a href="/effects.html#roi">ROI 및 유지보수</a></li>
-      </ol>
-      <p><a href="/effects.html">자세히 보기 →</a></p>
-    </section>
-
-    <section aria-labelledby="home-cases">
-      <h2 id="home-cases">시공사례</h2>
-      <ul>
-        <li><a href="/cases/retail-001.html">사례 #001 (리테일)</a></li>
-        <li><a href="/cases/factory-002.html">사례 #002 (제조공장)</a></li>
-        <li><a href="/cases/hospital-003.html">사례 #003 (병원)</a></li>
-      </ul>
-      <p><a href="/cases/index.html">전체 사례 보기 →</a></p>
-    </section>
-
-    <section aria-labelledby="home-resources">
-      <h2 id="home-resources">기술자료실</h2>
-      <ul>
-        <li><a href="/resources.html#manuals">사용설명서</a></li>
-        <li><a href="/resources.html#certs">인증/시험성적서</a></li>
-        <li><a href="/resources.html#downloads">자료 다운로드</a></li>
-      </ul>
-      <p><a href="/resources.html">자료 더 보기 →</a></p>
-    </section>
-
-    <section aria-labelledby="home-cta">
-      <h2 id="home-cta">바로 상담이 필요하신가요?</h2>
-      <p><a href="/contact.html">문의 페이지</a>에서 연락처를 남겨 주세요.</p>
-      <!-- 임시: Google Forms를 사용하는 경우 이곳에 iframe을 삽입해도 됨. CSS는 나중에 적용. -->
-    </section>
-  </main>
-
-  <footer role="contentinfo">
-    <nav aria-label="푸터 링크">
-      <ul>
-        <li><a href="/privacy.html">개인정보처리방침</a></li>
-        <li><a href="/terms.html">이용약관</a></li>
-        <li><a href="/sitemap.html">사이트맵</a></li>
-      </ul>
-    </nav>
-    <address>
-      사업자명 · 사업자등록번호 · 주소 · 대표전화 · 이메일
-    </address>
-    <small>© <span id="year">2025</span> 회사명. All rights reserved.</small>
-  </footer>
-
-  <script>
-    // 연도 자동 표기(선택)
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
+<!doctype html><meta charset="utf-8"><title>Test</title><h1>It works!</h1>
